--- a/styles.css
+++ b/styles.css
@@ -1,82 +1,122 @@
-#contenedorHeader{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-
-.telefonoDiv{
-    width: 1408px;
-    height: 59px;
-    background-color:#000000;
-    display: flex;
-}
-
-.tituloBlanco{
-    width: 121;
-    height: 20;
-    color: #ffffff;
+.firstSpan__text {
+    font-family: "Inter", sans-serif;
     font-size: 13px;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: lighter;
-}
-
-#billetes{
-    width: 1408px;
-    height: 1200px;
+    font-weight: 400;
+    color: #ffffff;
+    width: 121px;
+    height: 20px;
+    display: inline-block;
+    overflow: hidden;
+    white-space: nowrap;
+  }
+  
+  .secondSpan__text {
+    font-family: "Inter", sans-serif;
+    font-size: 14px;
+    font-weight: 400;
+    color: #ffffff;
+    width: 221px;
+    height: 23px;
+    display: inline-block;
+    overflow: hidden;
+    white-space: nowrap;
+  }
+  
+  .header__nav {
+    height: 59px;
+  }
+  
+  .secondHeader__nav {
+    height: 54px;
+  }
+  
+  main {
+    margin-top: 113px;
+    background-image: url("/images/dolaricos.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    margin: 0;
+    height: 772px;
+    padding: 0;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
-    justify-items: center;
-    background-color: bisque;
-    margin-top: 2px;
-}
-
-#pantalla{
+    position: relative;
+    z-index: 0;
+  }
+  
+  main::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.8);
+    z-index: -1;
+  }
+  
+  #cuerpoCalculadora {
+    margin-top: 68px;
     width: 462px;
-    height: 93;
-    background-color: #4F5B49;
-}
-
-#fondoGris{
-    background-color: #5F625E;
-    width: 462px;
-    border-radius: 10px;
     height: 636px;
+    background-color: #5f625e;
+    border-radius: 10px;
+    gap: 23px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    
-}
-
-#contenedorNumeros{
-    display: flex;
-    margin-top: 0px;
-}
-
-.rowTablero{
+  }
+  
+  #pantallaCalculadora {
+    width: 462px;
+    height: 93px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    padding: 19px 20px;
+    background-color: #4f5b49;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
-}
-
-.numerin{
-    font-size: 20px;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-}
-
-.numberDiv{
-    width: 85px;
-    height: 70px;
-    display: flex;
-    flex-direction: column;
-    border-radius:5px;
-    background-color: #F39C11;
-    text-align: center;
+    justify-content: right;
+    text-align: right;
+  }
+  
+  #numero {
+    width: 393px;
+    height: 46px;
+    font-family: "Inter", sans-serif;
+    font-size: 40px;
+    color: #ffffff;
+    margin-right: 35px;
+  }
+  
+  #contenedorTeclas {
+    width: 415px;
+    height: 446px;
+    gap: 25px;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr); /* 4 columnas de igual tamaño */
+    grid-template-rows: repeat(5, 1fr);    /* 5 filas de igual tamaño */
+    gap: 10px; /* Opcional: espacio entre los elementos */
     align-items: center;
-    justify-items: center;
-    margin: 10px;
-    margin-left: 5px;
-    margin-right: 5px;
-    margin-bottom: 20px;
-}
+    margin: 0 auto;
+    width: fit-content;
+  }
+  
+  .botonCalculadora{
+    font-family: "Inter", sans-serif;
+    width: 85px;
+    font-weight: 700;
+    height: 70px;
+    border-radius: 5px;
+    background-color: #FFFFFF;
+    box-shadow: 0px 4px 10px 3px #00000080;
+    font-size: 30px;
+    text-align: center;
+  }
+  
+  .botonCalculadora--naranja{
+    background-color: #f39c11;
+    color: #FFFFFF;
+  }
